--- a/package.json
+++ b/package.json
@@ -8,7 +8,9 @@
     "test": "jest"
   },
   "dependencies": {
+    "@react-native-community/datetimepicker": "^3.0.3",
     "@react-native-community/masked-view": "0.1.10",
+    "@react-native-community/picker": "^1.8.0",
     "@react-navigation/drawer": "^5.9.1",
     "@react-navigation/native": "^5.7.4",
     "@react-navigation/stack": "^5.9.1",
@@ -16,9 +18,11 @@
     "expo-splash-screen": "~0.6.1",
     "expo-status-bar": "~1.0.2",
     "expo-updates": "~0.3.3",
+    "moment": "^2.29.0",
     "react": "16.13.1",
     "react-dom": "16.13.1",
     "react-native": "0.63.2",
+    "react-native-datepicker": "^1.7.2",
     "react-native-elements": "^2.3.2",
     "react-native-gesture-handler": "~1.7.0",
     "react-native-reanimated": "~1.13.0",
