--- a/package.json
+++ b/package.json
@@ -15,6 +15,8 @@
     "@react-navigation/native": "^5.7.4",
     "@react-navigation/stack": "^5.9.1",
     "expo": "~39.0.2",
+    "expo-notifications": "^0.7.2",
+    "expo-permissions": "^9.3.0",
     "expo-secure-store": "^9.2.0",
     "expo-splash-screen": "~0.6.1",
     "expo-status-bar": "~1.0.2",
